Fix: Resolved issue for student timetable not showing + improved UI for timetable display

--- a/src/index.css
+++ b/src/index.css
@@ -73,7 +73,6 @@
   display: none !important;
 }
 
-
 .rbc-time-slot {
   height: 20px !important;
   width: 20px !important;
@@ -88,6 +87,7 @@
   height: 80px !important;
 }
 
+/*this is for the Date and Day row in header of timetable*/
 .rbc-header {
   display: flex !important;
   height: 80px !important;
@@ -96,11 +96,13 @@
   border-bottom: none !important;
 }
 
+/*this is for header lower border line height*/
 .rbc-row {
   height: 80px !important;
 
 }
 
+/*for width of the first cell containing GTM+5*/
 .rbc-time-header-gutter {
   width: 110px !important;
 }
@@ -119,13 +121,14 @@
   height: 50px !important;
 }
 
+/*This is for the text in red boxes*/
 .rbc-event-content {
   height: 20px !important;
-  width: 100px !important;
+  width: 120px !important;
 }
 
 /* ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
-/* timeslot box height check */
+/* for each timeslot background height*/
 .rbc-timeslot-group {
   min-height: 80px !important;
 }
